--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Hello</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/style.css">
+<title>Responsive Layout</title>
+
 </head>
 <body>
-	<h1>Hello Coursera it's a greate course</h1>
+<h1>Responsive Layout</h1>
+
+<div class="row">
+  <div class="content col-lg-4 col-md-6">
+  	<h2 class="custom-colored-1">Chicken</h2>
+  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officiis dolor commodi cumque reiciendis fugiat deleniti sapiente voluptatibus dignissimos quasi, quisquam cupiditate odio ratione, adipisci vel ut illo ex, a.</p>
+  </div>
+  <div class="content col-lg-4 col-md-6">
+  	<h2 class="custom-colored-2">Beef</h2>
+  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officiis dolor commodi cumque reiciendis fugiat deleniti sapiente voluptatibus dignissimos quasi, quisquam cupiditate odio ratione, adipisci vel ut illo ex, a.</p>
+  </div>
+  <div class="content col-lg-4 col-md-12">
+  	<h2 class="custom-colored-3">Sushi</h2>
+  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem officiis dolor commodi cumque reiciendis fugiat deleniti sapiente voluptatibus dignissimos quasi, quisquam cupiditate odio ratione, adipisci vel ut illo ex, a.</p>
+  </div>
+
+</div>
+
 </body>
 </html>
