--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -14,8 +14,9 @@
 
   <h1>Hello!</h1>
 <header>
-  <nav class="navbar navbar-light light-blue lighten-4">
   <div class="container-fluid">
+  <nav class="navbar navbar-light light-blue lighten-4">
+  
     <div class="navbar-header">
  
     <a class="navbar-brand" href="#">Navbar</a>
@@ -29,13 +30,13 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Chicken<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Beef</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Sushi</a>
       </li>
     </ul>
     <!-- Links -->
