--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 
-  <h1>Hello!</h1>
+  <h1 class="text-center">Our Menu</h1>
 <header>
   <div class="container-fluid">
   <nav class="navbar navbar-light light-blue lighten-4">
   
     <div class="navbar-header">
  
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Food, LLC</a>
 
       <button class="navbar-toggler d-block d-sm-none" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
